# bimaxpy

./: .gitignore  README.md  bimax.py  build.py  pyproject.toml  setup.py
bimaxpy/: __init__.py  build.py
