[tool.poetry]
name = "bimaxpy"
version = "0.1.0"
description = "python bindings for bimax algorithm written in go"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cffi = "^1.14.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
